tools/tests/ui/fail/l1078.cnf
// Test file for error code: L1078
// Expected error: Overflow DATA-CSV character in indentation -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-overflow".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
